feat(calculator): 문자열에서 구분자를 추출하라